--- a/style.css
+++ b/style.css
@@ -1,3 +1,93 @@
 #customPercentageBlock {
   display: none;
+  text-align: center;
+}
+
+.containerMaster {
+  display: flex;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 720px;
+  justify-content: center;
+}
+
+.subContainer {
+  border: 2px solid #800080;
+  padding: 20px;
+  text-align: center;
+  border-radius: 10px 10px 10px 10px;
+  -webkit-border-radius: 10px 10px 10px 10px;
+  -moz-border-radius: 10px 10px 10px 10px;
+  background-color: #00000071;
+}
+
+.appBlock {
+  text-align: center;
+}
+
+.infoBlock {
+  text-align: center;
+}
+
+body {
+  background: url("assets/img/blurry-background.jpg") no-repeat fixed right;
+  background-size: 1920px 1080px;
+  color: #ffffff;
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+label {
+  display: block;
+  margin-bottom: 10px;
+  font-size: 16px;
+}
+
+input[type="number"] {
+  padding: 10px;
+  border: 1px solid #800080;
+  border-radius: 5px;
+  font-size: 16px;
+  margin-bottom: 15px;
+}
+
+button {
+  background-color: #800080;
+  color: white;
+  margin-top: 5px;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #483d8b;
+}
+
+
+h1, h2 {
+  font-size: 24px;
+  margin-top: 20px;
+}
+
+p a {
+  color: #800080;
+  text-decoration: none;
+  transition: color 0.3s ease;
+}
+
+p a:hover {
+  color: #483d8b;
 }
